// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      200
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      60
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      10
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      40
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.04
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      250.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
</div>
`;

exports[`state.viewer is true 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      200
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      60
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      10
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      40
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.04
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      250.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <HsCodeViewer
    close={[Function]}
    hsCodes={Array []}
    item={
      Object {
        "cargo_item_type_id": "foo",
        "chargeable_weight": 250,
        "dangerous_goods": false,
        "description": "FOO_CARGO_ITEM_DESCRIPTION",
        "dimension_x": 10,
        "dimension_y": 60,
        "dimension_z": 40,
        "gross_weight": 76,
        "hs_codes": Array [
          4,
        ],
        "hs_text": "FOO_CARGO_ITEM_HS_TEXT",
        "id": 1,
        "key": "FOO_CARGO_ITEM_KEY",
        "payload_in_kg": 200,
        "quantity": 5,
        "stackable": true,
        "tare_weight": 20,
        "weight": 220,
      }
    }
    t={[Function]}
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;

exports[`theme.colors is falsy 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      200
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      60
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      10
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      40
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.04
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      250.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
</div>
`;

exports[`viewHSCodes is true 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      200
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      60
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      10
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      40
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.04
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      250.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-wrap"
    onClick={[Function]}
  >
    <i
      className="fa fa-eye clip flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    />
    <p
      className="offset-5 flex-none"
    >
      View Hs Codes
    </p>
  </div>
</div>
`;
